--- a/src/styles/part5.css
+++ b/src/styles/part5.css
@@ -37,6 +37,7 @@ h4 {
   margin: 0 auto;
   margin-top: 20px;
   width: 365px;
+  height: 110px;
   color: #212529;
   text-align: center;
   font-feature-settings: "clig" off, "liga" off;
@@ -45,5 +46,9 @@ h4 {
   font-style: normal;
   font-weight: 400;
   line-height: 140%;
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
